Finished chapter 15.7 Word similarity and analogy.

--- a/dl24-d2l-NLP-Pretraining.ipynb
+++ b/dl24-d2l-NLP-Pretraining.ipynb
@@ -3191,11 +3191,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "adeacfbb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d2l.DATA_HUB['glove.6b.50d'] = (d2l.DATA_URL + 'glove.6B.50d.zip', \n",
+    "                               '0b8703943ccdb6eb788e6f091b8946e82231bc4d')\n",
+    "\n",
+    "d2l.DATA_HUB['glove.6b.100d'] = (d2l.DATA_URL + 'glove.6B.100d.zip', \n",
+    "                                'cd43bfb07e44e6f27cbcc7bc9ae3d80284fdaf5a')\n",
+    "\n",
+    "d2l.DATA_HUB['glove.42b.300d'] = (d2l.DATA_URL + 'glove.42B.300d.zip',\n",
+    "                                 'b5116e234e9eb9076672cfeabf5469f3eec904fa')\n",
+    "\n",
+    "d2l.DATA_HUB['wiki.en'] = (d2l.DATA_URL + 'wiki.en.zip',\n",
+    "                          'c1816da3821ae9f43899be655002f6c723e91b88')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "3826c387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TokenEmbedding:\n",
+    "    \"\"\"Token Embedding.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, embedding_name):\n",
+    "        self.idx_to_token, self.idx_to_vec = self._load_embedding(\n",
+    "            embedding_name)\n",
+    "        self.unknown_idx = 0\n",
+    "        self.token_to_idx = {token: idx for idx, token in enumerate(self.idx_to_token)}\n",
+    "        \n",
+    "    def _load_embedding(self, embedding_name):\n",
+    "        idx_to_token, idx_to_vec = ['<unk>'], []\n",
+    "        data_dir = d2l.download_extract(embedding_name)\n",
+    "        \n",
+    "        with open(os.path.join(data_dir, 'vec.txt'), 'r') as f:\n",
+    "            for line in f:\n",
+    "                elems = line.rstrip().split(' ')\n",
+    "                token, elems = elems[0], [float(elem) for elem in elems[1:]]\n",
+    "                \n",
+    "                if len(elems) > 1:\n",
+    "                    idx_to_token.append(token)\n",
+    "                    idx_to_vec.append(elems)\n",
+    "        \n",
+    "        idx_to_vec = [[0] * len(idx_to_vec[0])] + idx_to_vec\n",
+    "        return idx_to_token, torch.tensor(idx_to_vec)\n",
+    "    \n",
+    "    def __getitem__(self, tokens):\n",
+    "        indices = [self.token_to_idx.get(token, self.unknown_idx)\n",
+    "                  for token in tokens]\n",
+    "        vecs = self.idx_to_vec[torch.tensor(indices)]\n",
+    "        return vecs\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.idx_to_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "01d11074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading ../data/glove.6B.50d.zip from http://d2l-data.s3-accelerate.amazonaws.com/glove.6B.50d.zip...\n"
+     ]
+    }
+   ],
+   "source": [
+    "glove_6b50d = TokenEmbedding('glove.6b.50d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "7e98092c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400001"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b782055b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3367, 'beautiful')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove_6b50d.token_to_idx['beautiful'], glove_6b50d.idx_to_token[3367]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "3554d906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Word Similarity\n",
+    "\n",
+    "def knn(W, x, k):\n",
+    "    \n",
+    "    cos = torch.mv(W, x.reshape(-1,)) / (\n",
+    "        torch.sqrt(torch.sum(W * W, axis=1) + 1e-9) *\n",
+    "        torch.sqrt((x * x).sum()))\n",
+    "    \n",
+    "    _, topk = torch.topk(cos, k=k)\n",
+    "    \n",
+    "    return topk, [cos[int(i)] for i in topk]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "4c8ba236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_similar_tokens(query_token, k, embed):\n",
+    "    topk, cos = knn(embed.idx_to_vec, embed[[query_token]], k + 1)\n",
+    "    for i, c in zip(topk[1:], cos[1:]):\n",
+    "        print(f'cosine sim={float(c):.3f}: {embed.idx_to_token[int(i)]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4b15c345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cosine sim=0.856: chips\n",
+      "cosine sim=0.749: intel\n",
+      "cosine sim=0.749: electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_similar_tokens('chip', 3, glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "3dd8dcb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cosine sim=0.839: babies\n",
+      "cosine sim=0.800: boy\n",
+      "cosine sim=0.792: girl\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_similar_tokens('baby', 3, glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f07e5b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Word Analogy\n",
+    "\n",
+    "def get_analogy(token_a, token_b, token_c, embed):\n",
+    "    vecs = embed[[token_a, token_b, token_c]]\n",
+    "    x = vecs[1] - vecs[0] + vecs[2]\n",
+    "    topk, cos = knn(embed.idx_to_vec, x, 1)\n",
+    "    return embed.idx_to_token[int(topk[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "9ca5d8fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'daughter'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_analogy('man', 'woman', 'son', glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "63a2a521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'japan'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_analogy('beijing', 'china', 'tokyo', glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d8cbfad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'biggest'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_analogy('bad', 'worst', 'big', glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e466251e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'went'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_analogy('do', 'did', 'go', glove_6b50d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1d98f3c",
+   "metadata": {},
+   "source": [
+    "* In practice, word vectors that are pretrained on large corpora can be applied to downstream natural language processing tasks.\n",
+    "\n",
+    "* Pretrained word vectors can be applied to the word similarity and analogy tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686b4478",
+   "metadata": {},
+   "source": [
+    "## Chapter 15.8 Bidirectional Encoder Representations from Transformers (BERT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "22721e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from d2l import torch as d2l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "878f4617",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1776846790.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[80], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_tokens_and_segments(tokens_a, tokens_b=None):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
