--- a/dl24-d2l-NLP-Pretraining.ipynb
+++ b/dl24-d2l-NLP-Pretraining.ipynb
@@ -3516,22 +3516,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "id": "878f4617",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tokens_and_segments(tokens_a, tokens_b=None):\n",
+    "    \"\"\"Get tokens of the BERT input sequence and their segment IDs.\"\"\"\n",
+    "    \n",
+    "    tokens = ['<cls'] + tokens_a + ['<sep>']\n",
+    "    segments = [0] * (len(tokens_a) + 2)\n",
+    "    if tokens_b is not None:\n",
+    "        tokens += tokens_b + ['<sep>']\n",
+    "        segments += [1] * (len(tokens_b) + 1)\n",
+    "    return tokens, segments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "82935a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BERTEncoder(nn.Module):\n",
+    "    \"\"\"BERT encoder.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, vocab_size, num_hiddens, ffn_num_hiddens, \n",
+    "                 num_heads, num_blks, dropout, max_len=1000, **kwargs):\n",
+    "        \n",
+    "        super(BERTEncoder, self).__init__(**kwargs)\n",
+    "        self.token_embedding = nn.Embedding(vocab_size, num_hiddens)\n",
+    "        self.segment_embedding = nn.Embedding(2, num_hiddens)\n",
+    "        self.blks = nn.Sequential()\n",
+    "        for i in range(num_blks):\n",
+    "            self.blks.add_module(f'{i}', d2l.TransformerEncoderBlock(\n",
+    "                num_hiddens, ffn_num_hiddens, num_heads, dropout, True))\n",
+    "            \n",
+    "        self.pos_embedding = nn.Parameter(torch.randn(1, max_len, num_hiddens))\n",
+    "            \n",
+    "    def forward(self, tokens, segments, valid_lens):\n",
+    "        X = self.token_embedding(tokens) + self.segment_embedding(segments)\n",
+    "        X = X + self.pos_embedding[:, :X.shape[1], :]\n",
+    "        for blk in self.blks:\n",
+    "            X = blk(X, valid_lens)\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "9496699a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size, num_hiddens, ffn_num_hiddens, num_heads = 10000, 768, 1024, 4\n",
+    "ffn_num_input, num_blks, dropout = 768, 2, 0.2\n",
+    "encoder = BERTEncoder(vocab_size, num_hiddens, ffn_num_hiddens, num_heads, num_blks, dropout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "329c39d8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1776846790.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[80], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 8, 768])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_tokens_and_segments(tokens_a, tokens_b=None):\n",
-    "    "
+    "tokens = torch.randint(0, vocab_size, (2, 8))\n",
+    "segments = torch.tensor([[0, 0, 0, 0, 1, 1, 1, 1], [0, 0, 0, 1, 1, 1, 1, 1]])\n",
+    "encoded_X = encoder(tokens, segments, None)\n",
+    "encoded_X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "e0f4bcff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MaskLM(nn.Module):\n",
+    "    \"\"\"The masked language model task of BERT.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, vocab_size, num_hiddens, **kwargs):\n",
+    "        super(MaskLM, self).__init__(**kwargs)\n",
+    "        self.mlp = nn.Sequential(nn.LazyLinear(num_hiddens),\n",
+    "                                nn.ReLU(),\n",
+    "                                nn.LayerNorm(num_hiddens),\n",
+    "                                nn.LazyLinear(vocab_size))\n",
+    "    \n",
+    "    def forward(self, X, pred_positions):\n",
+    "        num_pred_positions = pred_positions.shape[1]\n",
+    "        pred_positions = pred_positions.reshape(-1)\n",
+    "        batch_size = X.shape[0]\n",
+    "        batch_idx = torch.arange(0, batch_size)\n",
+    "        \n",
+    "        batch_idx = torch.repeat_interleave(batch_idx, num_pred_positions)\n",
+    "        masked_X = X[batch_idx, pred_positions]\n",
+    "        masked_X = masked_X.reshape((batch_size, num_pred_positions, -1))\n",
+    "        mlm_Y_hat = self.mlp(masked_X)\n",
+    "        return mlm_Y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "130c2168",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 10000])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlm = MaskLM(vocab_size, num_hiddens)\n",
+    "mlm_positions = torch.tensor([[1, 5, 2], [6, 1, 5]])\n",
+    "mlm_Y_hat = mlm(encoded_X, mlm_positions)\n",
+    "mlm_Y_hat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "39adccd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlm_Y = torch.tensor([[7, 8, 9], [10, 20, 30]])\n",
+    "loss = nn.CrossEntropyLoss(reduction='none')\n",
+    "mlm_l = loss(mlm_Y_hat.reshape((-1, vocab_size)), mlm_Y.reshape(-1))\n",
+    "mlm_l.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e98554fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NextSentencePred(nn.Module):\n",
+    "    \"\"\"The next sentence prediction task of BERT.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, **kwargs):\n",
+    "        super(NextSentencePred, self).__init__(**kwargs)\n",
+    "        self.output = nn.LazyLinear(2)\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        return self.output(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "85aaa372",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 2])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_X = torch.flatten(encoded_X, start_dim=1)\n",
+    "nsp = NextSentencePred()\n",
+    "nsp_Y_hat = nsp(encoded_X)\n",
+    "nsp_Y_hat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "3fdf8184",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nsp_y = torch.tensor([0, 1])\n",
+    "nsp_l = loss(nsp_Y_hat, nsp_y)\n",
+    "nsp_l.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "9f3fb3c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BERTModel(nn.Module):\n",
+    "    \"\"\"The BERT Model.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, vocab_size, num_hiddens, ffn_num_hiddens,\n",
+    "                num_heads, num_blks, dropout, max_len=1000):\n",
+    "        super(BERTModel, self).__init__()\n",
+    "        self.encoder = BERTEncoder(vocab_size, num_hiddens, ffn_num_hiddens,\n",
+    "                                  num_heads, num_blks, dropout, max_len=max_len)\n",
+    "        self.hidden = nn.Sequential(nn.LazyLinear(num_hiddens), nn.Tanh())\n",
+    "        self.mlm = MaskLM(vocab_size, num_hiddens)\n",
+    "        self.nsp = NextSentencePred()\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, tokens, segments, valid_lens=None, pred_positions=None):\n",
+    "        encoded_X = self.encoder(tokens, segments, valid_lens)\n",
+    "        if pred_positions is not None:\n",
+    "            mlm_Y_hat = self.mlm(encoded_X, pred_positions)\n",
+    "        else:\n",
+    "            mlm_Y_hat = None\n",
+    "        \n",
+    "        nsp_Y_hat = self.nsp(self.hidden(encoded_X[:, 0, :]))\n",
+    "        return encoded_X, mlm_Y_hat, nsp_Y_hat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcc2ae37",
+   "metadata": {},
+   "source": [
+    "* BERT combines the best of both worlds: it encodes context bidirectionally and requires minimal architecture changes for a wide range of natural language processing tasks.\n",
+    "\n",
+    "* The embeddings of the BERT input sequence are the sum of the token embeddings, segment embeddings, and positional embeddings.\n",
+    "\n",
+    "* Pretraining BERT is composed of two tasks: masked language modeling and next sentence prediction. The former is able to encode bidirectional context for representing words, while the latter explicitly models the logical relationship between text pairs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ab2d8f5",
+   "metadata": {},
+   "source": [
+    "## Chapter 15.9 The Dataset for Pretraining BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "dcb7b742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import torch\n",
+    "from d2l import torch as d2l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "e3d52ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2l.DATA_HUB['wikitext-2'] = (\n",
+    "    'https://s3.amazonaws.com/research.metamind.io/wikitext/'\n",
+    "    'wikitext-2-v1.zip', '3c914d17d80b1459be871a5039ac23e752a53cbe'\n",
+    ")\n",
+    "\n",
+    "def _read_wiki(data_dir):\n",
+    "    file_name = os.path.join(data_dir, 'wiki.train.tokens')\n",
+    "    with open(file_name, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "        \n",
+    "    paragraphs = [line.strip().lower().split(' . ')\n",
+    "                 for line in lines if len(line.split(' . ')) >= 2]\n",
+    "    random.shuffle(paragraphs)\n",
+    "    return paragraphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "394ad775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_next_sentence(sentence, next_sentence, paragraphs):\n",
+    "    if random.random() < 0.5:\n",
+    "        is_next = True\n",
+    "    else:\n",
+    "        next_sentence = random.choice(random.choice(paragraphs))\n",
+    "        is_next = False\n",
+    "        \n",
+    "    return sentence, next_sentence, is_next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "99decb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_nsp_data_from_paragraph(paragraph, paragraphs, vocab, max_len):\n",
+    "    nsp_data_from_paragraph = []\n",
+    "    \n",
+    "    for i in range(len(paragraph) - 1):\n",
+    "        tokens_a, tokens_b, is_next = _get_next_sentence(\n",
+    "            paragraph[i], paragraph[i + 1], paragraphs)\n",
+    "        \n",
+    "        if len(tokens_a) + len(tokens_b) + 3 > max_len:\n",
+    "            continue\n",
+    "        tokens, segments = d2l.get_tokens_and_segments(tokens_a, tokens_b)\n",
+    "        nsp_data_from_paragraph.append((tokens, segments, is_next))\n",
+    "        \n",
+    "    return nsp_data_from_paragraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "9c9dd18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _replace_mlm_tokens(tokens, candidate_pred_positions, num_mlm_preds, vocab):\n",
+    "    # For the input of a masked language model, make a new copy of tokens and \n",
+    "    # replace some of them by '<mask>' or random tokens.\n",
+    "    \n",
+    "    mlm_input_tokens = [token for token in tokens]\n",
+    "    pred_positions_and_labels = []\n",
+    "    \n",
+    "    random.shuffle(candidate_pred_positions)\n",
+    "    for mlm_pred_position in candidate_pred_positions:\n",
+    "        if len(pred_positions_and_labels) >= num_mlm_preds:\n",
+    "            break\n",
+    "        masked_token = None\n",
+    "        \n",
+    "        if random.random() < 0.8:\n",
+    "            masked_token = '<mask>'\n",
+    "        else:\n",
+    "            if random.random() < 0.5:\n",
+    "                masked_token = tokens[mlm_pred_position]\n",
+    "                \n",
+    "            else:\n",
+    "                masked_token = random.choice(vocab.idx_to_token)\n",
+    "        mlm_input_tokens[mlm_pred_position] = masked_token\n",
+    "        pred_positions_and_labels.append(\n",
+    "            (mlm_pred_position, tokens[mlm_pred_position]))\n",
+    "    \n",
+    "    return mlm_input_tokens, pred_positions_and_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "16ab7049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_mlm_data_from_tokens(tokens, vocab):\n",
+    "    candidate_pred_positions = []\n",
+    "    \n",
+    "    for i, token in enumerate(tokens):\n",
+    "        if token in ['<cls>', '<sep>']:\n",
+    "            continue\n",
+    "        candidate_pred_positions.append(i)\n",
+    "        \n",
+    "    num_mlm_preds = max(1, round(len(tokens) * 0.15))\n",
+    "    mlm_input_tokens, pred_positions_and_labels = _replace_mlm_tokens(\n",
+    "        tokens, candidate_pred_positions, num_mlm_preds, vocab)\n",
+    "    pred_positions = [v[0] for v in pred_positions_and_labels]\n",
+    "    mlm_pred_labels = [v[1] for v in pred_positions_and_labels]\n",
+    "    \n",
+    "    return vocab[mlm_input_tokens], pred_positions, vocab[mlm_pred_labels]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "6503034a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 15.9.2 Transforming Text into the Pretraining Dataset"
    ]
   }
  ],
