Finished chatper 15.9 dataset of pretraining BERT, but it failed to work.

--- a/dl24-d2l-NLP-Pretraining.ipynb
+++ b/dl24-d2l-NLP-Pretraining.ipynb
@@ -3795,7 +3795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "id": "dcb7b742",
    "metadata": {},
    "outputs": [],
@@ -3808,14 +3808,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "id": "e3d52ccf",
    "metadata": {},
    "outputs": [],
    "source": [
     "d2l.DATA_HUB['wikitext-2'] = (\n",
-    "    'https://s3.amazonaws.com/research.metamind.io/wikitext/'\n",
-    "    'wikitext-2-v1.zip', '3c914d17d80b1459be871a5039ac23e752a53cbe'\n",
+    "    'https://s3.amazonaws.com/research.metamind.io/wikitext/wikitext-2-v1.zip', '3c914d17d80b1459be871a5039ac23e752a53cbe'\n",
     ")\n",
     "\n",
     "def _read_wiki(data_dir):\n",
@@ -3831,7 +3830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "id": "394ad775",
    "metadata": {},
    "outputs": [],
@@ -3848,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "id": "99decb02",
    "metadata": {},
    "outputs": [],
@@ -3870,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "id": "9c9dd18c",
    "metadata": {},
    "outputs": [],
@@ -3905,7 +3904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "16ab7049",
    "metadata": {},
    "outputs": [],
@@ -3929,13 +3928,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "6503034a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 15.9.2 Transforming Text into the Pretraining Dataset"
+    "# 15.9.2 Transforming Text into the Pretraining Dataset\n",
+    "\n",
+    "def _pad_bert_inputs(examples, max_len, vocab):\n",
+    "    max_num_mlm_preds = round(max_len * 0.15)\n",
+    "    all_token_ids, all_segments, valid_lens, = [], [], []\n",
+    "    all_pred_positions, all_mlm_weights, all_mlm_labels = [], [], []\n",
+    "    nsp_labels = []\n",
+    "    \n",
+    "    for (token_ids, pred_positions, mlm_pred_label_ids, segments, is_next) in examples:\n",
+    "        all_token_ids.append(torch.tensor(token_ids + [vocab['<pad>']] * (\n",
+    "            max_len - len(token_ids)), dtype=torch.long))\n",
+    "        all_segments.append(torch.tensor(segments + [0] * (\n",
+    "            max_len - len(segments)), dtype=torch.long))\n",
+    "        \n",
+    "        valid_lens.append(torch.tensor(len(token_ids), dtype=torch.float32))\n",
+    "        all_pred_positions.append(torch.tensor(pred_positions + [0] * (\n",
+    "            max_num_mlm_preds - len(pred_positions)), dtype=torch.long))\n",
+    "        \n",
+    "        all_mlm_weights.append(\n",
+    "            torch.tensor([1.0] * len(mlm_pred_label_ids) + [0.0] * (\n",
+    "                max_num_mlm_preds - len(pred_positions)), dtype=torch.float32))\n",
+    "        all_mlm_labels.append(torch.tensor(mlm_pred_labels_ids + [0] * (\n",
+    "            max_mum_mlm_preds - len(mlm_pred_label_ids)), dtype=torch.long))\n",
+    "        \n",
+    "        nsp_labels.append(torch.tensor(is_next, dtype=torch.long))\n",
+    "        \n",
+    "    return (all_token_ids, all_segments, valid_lens, all_pred_positions, \n",
+    "            all_mlm_weights, all_mlm_labels, nsp_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "131311ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class _WikiTextDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, paragraphs, max_len):\n",
+    "        paragraphs = [d2l.tokenize(\n",
+    "            paragraph, token='word') for paragraph in paragraphs]\n",
+    "        sentences = [sentence for paragraph in paragraphs \n",
+    "                    for sentence in paragraph]\n",
+    "        self.vocab = d2l.Vocab(sentences, min_freq=5, reserved_tokens=[\n",
+    "            '<pad>', '<mask>', '<cls>', '<sep>'\n",
+    "        ])\n",
+    "        \n",
+    "        examples = []\n",
+    "        \n",
+    "        for paragraph in paragraphs:\n",
+    "            examples.extend(_get_nsp_data_from_paragraph(\n",
+    "                paragraph, paragraphs, self.vocab, max_len))\n",
+    "            \n",
+    "        examples = [(_get_mlm_data_from_tokens(tokens, self.vocab)\n",
+    "                    + (segments, is_next)) for tokens, segments, is_next in examples]\n",
+    "        \n",
+    "        (self.all_token_ids, self.all_segments, self.valid_lens, \n",
+    "        self.all_pred_positions, self.all_mlm_weights,\n",
+    "        self.all_mlm_labels, self.nsp_labels) = _pad_bert_inputs(\n",
+    "            examples, max_len, self.vocab)\n",
+    "        \n",
+    "    def __getitem__(self, idx):\n",
+    "        return (self.all_token_ids[idx], self.all_segments[idx],\n",
+    "               self.valid_lens[idx], self.all_pred_positions[idx],\n",
+    "               self.all_mlm_weights[idx], self.all_mlm_labels[idx],\n",
+    "               self.nsp_labels[idx])\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.all_token_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "4226e2ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_wiki(batch_size, max_len):\n",
+    "    \"\"\"Load the WikiText-2 dataset.\"\"\"\n",
+    "    num_workers = d2l.get_dataloader_workers()\n",
+    "    data_dir = d2l.download_extract('wikitext-2', 'wikitext-2')\n",
+    "    paragraphs = _read_wiki(data_dir)\n",
+    "    train_set = _WikiTextDataset(paragraphs, max_len)\n",
+    "    train_iter = torch.utils.data.DataLoader(train_set, batch_size, shuffle=True, num_workers=num_workers)\n",
+    "    \n",
+    "    return train_iter, train_set.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "ad027d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading ../data/wikitext-2-v1.zip from https://s3.amazonaws.com/research.metamind.io/wikitext/wikitext-2-v1.zip...\n"
+     ]
+    },
+    {
+     "ename": "BadZipFile",
+     "evalue": "File is not a zip file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[136], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m batch_size, max_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m512\u001b[39m, \u001b[38;5;241m64\u001b[39m\n\u001b[0;32m----> 2\u001b[0m train_iter, vocab \u001b[38;5;241m=\u001b[39m \u001b[43mload_data_wiki\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_len\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m (tokens_X, segements_X, valid_lens_x, pred_positions_X, mlm_weights_X, mlm_Y, nsp_y) \u001b[38;5;129;01min\u001b[39;00m train_iter:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(tokens_X\u001b[38;5;241m.\u001b[39mshape, segments_X\u001b[38;5;241m.\u001b[39mshape, valid_lens_x\u001b[38;5;241m.\u001b[39mshape,\n\u001b[1;32m      6\u001b[0m          pred_positions_X\u001b[38;5;241m.\u001b[39mshape, mlm_weights_X\u001b[38;5;241m.\u001b[39mshape, mlm_Y\u001b[38;5;241m.\u001b[39mshape, nsp_y\u001b[38;5;241m.\u001b[39mshape)\n",
+      "Cell \u001b[0;32mIn[126], line 4\u001b[0m, in \u001b[0;36mload_data_wiki\u001b[0;34m(batch_size, max_len)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Load the WikiText-2 dataset.\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m num_workers \u001b[38;5;241m=\u001b[39m d2l\u001b[38;5;241m.\u001b[39mget_dataloader_workers()\n\u001b[0;32m----> 4\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[43md2l\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdownload_extract\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwikitext-2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwikitext-2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m paragraphs \u001b[38;5;241m=\u001b[39m _read_wiki(data_dir)\n\u001b[1;32m      6\u001b[0m train_set \u001b[38;5;241m=\u001b[39m _WikiTextDataset(paragraphs, max_len)\n",
+      "File \u001b[0;32m~/anaconda3/envs/python3/lib/python3.10/site-packages/d2l/torch.py:3247\u001b[0m, in \u001b[0;36mdownload_extract\u001b[0;34m(name, folder)\u001b[0m\n\u001b[1;32m   3245\u001b[0m data_dir, ext \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39msplitext(fname)\n\u001b[1;32m   3246\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ext \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.zip\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m-> 3247\u001b[0m     fp \u001b[38;5;241m=\u001b[39m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3248\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m ext \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.tar\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.gz\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m   3249\u001b[0m     fp \u001b[38;5;241m=\u001b[39m tarfile\u001b[38;5;241m.\u001b[39mopen(fname, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/python3/lib/python3.10/zipfile.py:1269\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[0;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps)\u001b[0m\n\u001b[1;32m   1267\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1268\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m-> 1269\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1270\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m   1271\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[1;32m   1272\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[1;32m   1273\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/python3/lib/python3.10/zipfile.py:1336\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1334\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1335\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[0;32m-> 1336\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1337\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   1338\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
+      "\u001b[0;31mBadZipFile\u001b[0m: File is not a zip file"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size, max_len = 512, 64\n",
+    "train_iter, vocab = load_data_wiki(batch_size, max_len)\n",
+    "\n",
+    "for (tokens_X, segements_X, valid_lens_x, pred_positions_X, mlm_weights_X, mlm_Y, nsp_y) in train_iter:\n",
+    "    print(tokens_X.shape, segments_X.shape, valid_lens_x.shape,\n",
+    "         pred_positions_X.shape, mlm_weights_X.shape, mlm_Y.shape, nsp_y.shape)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "c7c3c8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6719"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71adcd22",
+   "metadata": {},
+   "source": [
+    "## Chapter 15.10 Pretraining BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02eae518",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
