Remove api key in the ipynb code.

--- a/dl24-llamaindex-parse.ipynb
+++ b/dl24-llamaindex-parse.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c3645c49",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f2b50d38",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
     "from llama_parse import LlamaParse\n",
     "\n",
     "parser = LlamaParse(\n",
-    "    api_key=\"llx-V5h9tBrzMol9JLEptDFb0uyVhwrCTVPV0ctUo4ww87VMLiVp\",\n",
+    "    # api_key=\"llx-*\",\n",
     "    result_type=\"markdown\",\n",
     "    num_workers=4,\n",
     "    verbose=True,\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "64ac932e",
    "metadata": {},
    "outputs": [
@@ -123,8 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 8c0c6a59-feec-4371-8900-6631b254d6fa\n",
-      "........."
+      "Started parsing the file under job_id d82fc6fa-75c8-4cec-a0fa-a5d4ee8165db\n"
      ]
     }
    ],
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "db76c7b7",
    "metadata": {},
    "outputs": [
@@ -142,56 +141,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rize or punctuate an idea from the main prose. This formatting shows I’m quoting a tweet. Tweetstorms are connected tweets, formatted like this: 10 · THE ALMANACK OF NAVAL RAVIKANT\n",
+      "t.\n",
+      "- Please verify phrasing with a primary source before citing Naval from this text.\n",
+      "- Please interpret generously.\n",
+      "\n",
+      "By definition, everything in this book is taken out of context. Interpretations will change over time. Read and interpret generously.\n",
       "---\n",
-      "This is the first tweet in a tweetstorm.\n",
+      "erously. Understand the original intent may be different than your interpretation in a different time, medium, format, and context. In the process of creating this book, I may have mistakenly re-contextualized, misinterpreted, or misunderstood things. As content passed through time, space, and medium, some phrasing may have shifted in flight. Every effort has been made to maintain the original intent, but errors are (very) possible. Interviews have been transcribed, edited, rearranged, and re-edited for readability. I did my best to keep Naval’s ideas in his own words. All brilliance in this book is Naval’s; any mistakes are mine.\n",
       "\n",
-      "This is the second tweet. Tweetstorms are longer series of tweets all threaded together, similar to a blog post.\n",
-      "\n",
-      "Many excerpts are from interviews by fantastic creators like\n",
-      "Shane Parrish, Sarah Lacy, Joe Rogan, and Tim Ferriss. The\n",
-      "questions are bolded. For simplicity and continuity, I do not\n",
-      "distinguish various interviewers from each other.\n",
-      "\n",
-      "NON-NARRATIVE\n",
-      "\n",
-      "This is a choose-your-own adventure book. Jump to anything\n",
-      "that interests you and skip anything that doesn’t.\n",
-      "\n",
-      "LOOK IT UP\n",
-      "\n",
-      "If you find a word or concept you’re not familiar with, look it\n",
-      "up. Or, read on to find more context. Some referenced ideas\n",
-      "are expanded upon later in the book.\n",
-      "\n",
-      "CITATIONS\n",
-      "\n",
-      "Citations (like [1]) indicate the end of an excerpt. I’ve done my\n",
-      "best to maintain context for smooth reading. Sources are in\n",
-      "the appendix for reference. Some sources appear many times\n",
-      "and do not appear in order.\n",
-      "\n",
-      "Important Notes On This Book (Disclaimer)\n",
-      "---\n",
-      "NO_CONTENT_HERE\n",
-      "---\n",
-      "FOREWORD BY TIM FERRISS\n",
-      "\n",
-      "Dear Reader,\n",
-      "\n",
-      "It feels strange for me to write these words, as I committed many years ago to never write forewords. I’m making a rare exception in this case for three reasons. First, a free version of this book is being offered to the world in a digital/Kindle/eBook format with no strings attached. Second, I’ve known Naval for more than a decade and have long wanted someone to compile this book. Third, I’m increasing the likelihood of Naval’s next child being named “Tim” (I’ll settle for “Timbo,” if he prefers).\n",
-      "\n",
-      "Naval is one of the smartest people I’ve ever met, and he’s also one of the most courageous. Not in the “run into the fire without thinking twice” sense, but in the “think twice and then tell everyone they’re focusing on the wrong fire” sense. He is rarely part of any consensus, and the uni\n"
+      "TWEETS AND TWEETSTORMS Tweets are formatted like pull quotes but are unique content. I use them to summa\n"
      ]
     }
    ],
    "source": [
-    "print(documents[0].text[4000:6000])"
+    "print(documents[0].text[3000:4000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "fb6601c9",
    "metadata": {},
    "outputs": [
@@ -199,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Doc ID: 5bcd5b27-2629-4dca-915b-8d528a941287\n",
+      "Doc ID: e77f2f5f-b575-43a8-8170-267d7486b233\n",
       "Text: NO_CONTENT_HERE --- NO_CONTENT_HERE --- NO_CONTENT_HERE --- #\n",
       "The Almanack of Naval Ravikant  Copyright © 2020 Eric Jorgenson  All\n",
       "rights reserved.  # The Almanack of Naval Ravikant  A Guide to Wealth\n",
